# all-in-apps

./: .env.example  Cargo.toml  README.md  compose.yaml
.sqlx/: query-31e4b7a198fc16476a55739a2ecf3a3a54fbcce002922d6f03f7bd12df870d14.json  query-395ac4b9a622fcdad04a750d49a21c7c63093bb8b942bf7e81926a056984d02d.json  query-568848e9570a354f598b7eddac2177b276cfafa4c084f38c90a6688e665e7573.json  query-5691b1321b4d2643f654a6eff18e45e52a47ae8bdbfbec8270660642b2e19e73.json  query-5d0ad7a653ceac0c190ceb6df11b9e6b59815cd219f55bf0912ffbc7005a9771.json  query-62acdebd4f50788b8a6283c712f650f99edebdff56175449344aff3444ef9d66.json  query-b381d4867c411a40c74d600c49a2f4558d7dbe4fc90c10dd496d8dc2586be00c.json  query-bda14637a60e802cdba5be8ebd8c86fcdeb48cabcb3ae6297f8e74b66a9fe945.json  query-cf0d47eca340bacc3103f4e389e6d8f8cd8586f7a204fee564ea1eedf4d49d97.json  query-fbbab0b7d0021fb6ed87b9e45413cfb491f42329de0cd543aeb9cd61d22223a7.json  query-ffd2de76e1636053abb4b257b8a9f43984c3798e29d25b54d6bbdda750d52033.json
crates/apps/ai-chat/: Cargo.toml  build.rs
crates/apps/ai-chat/migrations/: 20260224164500_create_ai_chat_tables.sql
crates/apps/ai-chat/proto/: ai_chat.proto
crates/apps/ai-chat/src/: errors.rs  handlers.rs  lib.rs  protobuf.rs  state.rs
crates/apps/notes/: Cargo.toml  build.rs
crates/apps/notes/migrations/: 20260220214635_create_notes_table.sql
crates/apps/notes/proto/: notes.proto
crates/apps/notes/src/: errors.rs  handlers.rs  lib.rs  protobuf.rs  state.rs
crates/apps/notes/tests/: notes_integration.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
ui/: .mcp.json  AGENTS.md  README.md  buf.gen.yaml  package.json  vite.config.ts
ui/proto/: notes.proto
ui/scripts/: notes-backend-smoke.ts
ui/src/lib/: index.ts
ui/src/lib/api/: notes.ts
ui/src/lib/protobuf/: notes.ts
ui/src/routes/: +layout.svelte  +page.svelte  layout.css
ui/tests/: notes-backend-smoke.test.ts
