[workspace]
members = ["crates/apps/notes", "crates/server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "All-in-apps is a web application that allows users to create and manage their own applications."
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros", "ws"] }
bytes = "1.11.1"
futures-util = "0.3.32"
http = "1.4.0"
prost = "0.14.3"
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
sqlx = { version = "0.8.3", default-features = false, features = ["derive", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
reqwest = { version = "0.13.2", default-features = false, features = ["http2", "rustls"] }
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
