[package]
name = "server"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true

[features]
default = []
notes = ["dep:notes"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

notes = { path = "../apps/notes", optional = true }

[lints]
workspace = true
